# emtl-mcp

./: .gitignore  README.md  claude-config.example.json  pyproject.toml  test_mcp.sh
.claude/: settings.local.json
src/emtl_mcp/: __init__.py  server.py
